# rust-backend-contacts-list

./: Cargo.toml  README.md  client_test.http  schema.sql
src/: db.rs  main.rs
src/handlers/: contacts.rs  mod.rs  users.rs
src/models/: contact.rs  mod.rs  user.rs
src/routes/: contacts.rs  users.rs
